--- a/HTML/Visiteurs/contact.html
+++ b/HTML/Visiteurs/contact.html
@@ -970,7 +970,7 @@
         <div class="top-bar-content">
             <div class="contact-info">
                 <a href="tel:0650848175">📞 06 50 84 81 75</a>
-                <a href="mailto:contact@formapro-plus.org">✉️ contact@formapro-plus.org</a>
+                <a href="mailto:contact@formapro-plus.org">✉️ adsiam@gmail.com</a>
             </div>
             <div class="social-links">
                 <a href="#" title="Facebook">📘</a>
@@ -983,18 +983,18 @@
     <!-- Header -->
     <header>
         <nav>
-            <a href="index.html" class="logo">
+            <a href="./home.html" class="logo">
                 <div class="logo-icon">A+</div>
                 <div class="logo-text">
                     <span class="forma">ADS</span><span class="pro">IAM</span>
                 </div>
             </a>
             <ul class="nav-links">
-                <li><a href="catalog.html">Formations</a></li>
+                <li><a href="./formations.html">Formations</a></li>
                 <li><a href="#financements">Financements</a></li>
                 <li><a href="#evenements">Événements</a></li>
                 <li><a href="#blog">Blog</a></li>
-                <li><a href="#contact" class="nav-cta active">Contact</a></li>
+                <li><a href="./contact.html" class="nav-cta active">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -1003,7 +1003,7 @@
     <div class="breadcrumb">
         <div class="breadcrumb-container">
             <nav class="breadcrumb-nav">
-                <a href="index.html">🏠 Accueil</a>
+                <a href="./home.html">🏠 Accueil</a>
                 <span class="breadcrumb-separator">›</span>
                 <span class="breadcrumb-current">Contact & Support</span>
             </nav>
