--- a/HTML/Visiteurs/home.html
+++ b/HTML/Visiteurs/home.html
@@ -939,11 +939,11 @@
                 </div>
             </a>
             <ul class="nav-links">
-                <li><a href="/formations/catalogue">Formations</a></li>
+                <li><a href="./formations.html">Formations</a></li>
                 <li><a href="#financements">Financements</a></li>
                 <li><a href="#evenements">Événements</a></li>
                 <li><a href="#blog">Blog</a></li>
-                <li><a href="/contact" class="nav-cta">Contact</a></li>
+                <li><a href="./contact" class="nav-cta">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -972,7 +972,7 @@
                         </div>
                     </div>
 
-                    <a href="#formations" class="hero-button">
+                    <a href="./formations.html" class="hero-button">
                         🚀 DÉCOUVRIR NOS FORMATIONS
                     </a>
                 </div>
@@ -1246,7 +1246,7 @@
                 <h2 class="cta-title">Prêt à <span class="cta-highlight">développer vos compétences</span> ?</h2>
                 <p class="cta-description">Rejoignez plus de 2500 professionnels qui ont déjà fait confiance à ADSIAM pour leur développement professionnel. Accédez à nos formations dès aujourd'hui.</p>
                 <div class="cta-buttons">
-                    <a href="#formations" class="cta-button">
+                    <a href="./formations.html" class="cta-button">
                         🚀 Commencer maintenant
                     </a>
                     <a href="#demo" class="cta-button secondary">
